# Photobooth-Backend

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  arduino_bridge.py  build.ps1  main.py  migrate.py  mock_arduino.py  pyproject.toml  seed_db.py  setup_tasks.ps1
app/: app_factory.py
app/api/routes/: admin.py  bills.py  health.py  photo_session.py  sessions.py
app/core/: _database.py  config.py  database.py  security.py
app/db/: __init__.py  admin_settings.py  bill_logs.py  branches.py  connection.py  device_events.py  expenses.py  packages.py  payments.py  photos.py  print_jobs.py  sessions.py  sync.py  units.py
app/models/: schemas.py
app/services/: bill_acceptor.py  dslrbooth_service.py
app/websocket/: endpoints.py  manager.py
deployment/: DEPLOYMENT_GUIDE.md  INSTALL.bat  build.ps1  package_delivery.ps1  run_backend.ps1  run_bridge.ps1  setup_tasks.ps1  start_photobooth.ps1
mock-backend/: mock_arduino.py  mock_dslrbooth.py
tests/: conftest.py  test_bill_acceptor.py  test_dslrbooth_service.py  test_photo_session_flow.py  test_routes.py
